--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Martxa || Home</title>
+        <title>COSMO SECURITY || Home</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -90,7 +90,7 @@
                     <div class="row">
                         <div class="col-md-3 hidden-sm hidden-xs">
     						<div class="logo">
-    							<h1><a href="index.html">Martxa</a></h1>
+    							<h1><a href="index.html">COSMO SECURITY</a></h1>
     						</div>
     					</div>
                         <div class="col-md-9 col-xs-12">
@@ -111,7 +111,7 @@
                                         </div>
                                         <div class="contact-info">
                                             <p>MAIL US</p>
-                                            <span>info@yourdomail.com</span>
+                                            <span>CosmoInfo@mail.com</span>
                                         </div>
                                     </li>
                                     <li>
@@ -120,7 +120,7 @@
                                         </div>
                                         <div class="contact-info">
                                             <p>PHONE US</p>
-                                            <span> (+1) 1144-1254</span>
+                                            <span> (+91) 8999804348</span>
                                         </div>
                                     </li>
                                 </ul>
@@ -134,7 +134,7 @@
     				<div class="row">
                         <div class="hidden-md hidden-lg col-sm-8 col-xs-6">
     						<div class="logo">
-    							<h1><a href="index.html">Martxa</a></h1>
+    							<h1><a href="index.html">COSMO SECURITY </a></h1>
     						</div>
     					</div>
     					<div class="col-md-11 hidden-sm hidden-xs">
@@ -142,66 +142,35 @@
     							<ul id="navigation">
     								<li class="active"><a href="index.html">Home <i class="fa fa-angle-down"></i></a>
     									<ul class="submenu">
-    										<li class="active"><a href="index.html">Home One</a></li>
-    										<li><a href="index2.html">Home Two</a></li>
-    										<li><a href="index3.html">Home Three</a></li>
+    										<li class="active"><a href="index.html">What Make You Here </a></li>
+    										<li><a href="index2.html">Thats Called Place </a></li>
+    										<li><a href="index3.html">The End</a></li>
     									</ul>
     								</li>
     								<li><a href="about.html">About <i class="fa fa-angle-down"></i></a>
     									<ul class="submenu">
-    										<li><a href="about.html">about One</a></li>
-    										<li><a href="about2.html">about Two</a></li>
-    										<li><a href="about3.html">about Three</a></li>
+    										<li><a href="about.html">This Is Me</a></li>
+    										<li><a href="about2.html">COSMO SECURITY</a></li>
+    										<li><a href="about3.html">Omega Star Production</a></li>
     									</ul>
                                     </li>
     								<li><a href="service.html">Service <i class="fa fa-angle-down"></i></a>
     									<ul class="submenu">
-    										<li><a href="service.html">service One</a></li>
-    										<li><a href="service2.html">service Two</a></li>
-    										<li><a href="single-service.html">service Single</a></li>
+    										<li><a href="service.html">Cyber Security</a></li>
+    										<li><a href="service2.html">Devlopment</a></li>
+    										<li><a href="single-service.html">Find Creators</a></li>
     									</ul>
     								</li>
-    								<li><a href="team.html">team <i class="fa fa-angle-down"></i></a>
+    								<li><a href="team.html">My Team<i class="fa fa-angle-down"></i></a>
     									<ul class="submenu">
-    										<li><a href="team.html">team One</a></li>
-    										<li><a href="team2.html">team Two <span class="pull-right">+</span></a>
+    										<li><a href="team.html">Omega Crew</a></li>
+    										<li><a href="team2.html">Cosmo Security<span class="pull-right">+</span></a>
     											<ul class="submenu">
-    												<li><a href="#">Sabmenu One</a></li>
-    												<li><a href="#">Sabmenu Two</a></li>
-    												<li><a href="#">Sabmenu Three <span class="pull-right">+</span></a>
-                                                        <ul class="submenu">
-                                                            <li><a href="#">Sabmenu One</a></li>
-                                                            <li><a href="#">Sabmenu Two</a></li>
-                                                            <li><a href="#">Sabmenu Three</a></li>
-                                                            <li><a href="#">Sabmenu Four</a></li>
-                                                            <li><a href="#">Sabmenu Five</a></li>
-                                                        </ul>
-                                                    </li>
-    												<li><a href="#">Sabmenu Four</a></li>
-    												<li><a href="#">Sabmenu Five</a></li>
-    											</ul>
-    										</li>
-											<li><a href="team3.html">Team Three</a></li>
-    									</ul>
-    								</li>
-    								<li><a href="portfolio.html">Portfolio <i class="fa fa-angle-down"></i></a>
-                                        <ul class="submenu">
-                                            <li><a href="portfolio.html">Portfolio Page</a></li>
-    										<li><a href="portfolio2.html">Portfolio Two</a></li>
-    										<li><a href="portfolio3.html">Portfolio Two</a></li>
-    										<li><a href="portfolio4.html">Portfolio Masonary</a></li>
-    										<li><a href="portfolio5.html">Portfolio Masonary </a></li>
-                                        </ul>
-                                    </li>
-    								<li><a href="blog.html">Blog <i class="fa fa-angle-down"></i></a>
-                                        <ul class="submenu">
-    										<li><a href="blog.html">Blog page</a></li>
-    										<li><a href="blog2.html">Blog Two column</a></li>
-    										<li><a href="blog-left.html">Blog Left Sidebar</a></li>
-    										<li><a href="blog-right.html">Blog Right Sidebar</a></li>
-    										<li><a href="blog-details.html">Blog Details</a></li>
-    										<li><a href="blog-post.html">Blog Post </a></li>
-    									</ul>
+    												<li><a href="#">Bug Bounty</a></li>
+    												<li><a href="#">flame</a></li>
+    												<li><a href="#">Jewels<span class="pull-right">+</span></a>
+                                                        
+    								</l>
     								</li>
     								<li><a href="contact.html">Contact</a></li>
     								<li><a href="#">Pages <i class="fa fa-angle-down"></i></a>
@@ -270,8 +239,8 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-xs-12 col-md-8 col-md-offset-2">
-											<h2>Welcome to our Martxa</h2>
-											<p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+											<h2>Welcome to our Network</h2>
+											<p>This is Cosmo Security , A devlopment Company Which was Started in 2017, our vision is to transform the IT sector of India in manner of Education and Devlopment  </p>
 											<ul>
 												<li><a href="#">Read More</a></li>
 												<li><a href="#">Get Started</a></li>
@@ -291,8 +260,8 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-xs-12 col-md-8 col-md-offset-2">
-											<h2>Hello i am Martxa</h2>
-											<p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+											<h2>Education</h2>
+											<p>Education for IT and Technologies , India is breathing Back with Moral World Of Technologies which Leads to Ranking Place in World Heritage of Tech & Media.We Lacking back in Devlopment Facilites and Centured Security of Sercured Internet  </p>
 											<ul>
 												<li><a href="#">Get Started</a></li>
 												<li><a href="#">Read More</a></li>
@@ -320,16 +289,14 @@
 					<div class="col-md-6 col-xs-12 wow fadeInRight">
 						<div class="about-wrap">
 							<h2>who we are</h2>
-							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.randomised words which don't look even slightly believable.</p>
-							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised. by injected humour, or randomised.</p>
+							<p>COSMO SECURITY , was Started in March of 24,2017 and in Just One Year we are here .</p>
 							<ul>
-								<li>There are many variations of passages</li>
-								<li>By injected humour or randomised.</li>
-								<li>the majority have suffered alteration</li>
-								<li>majority have suffered alteration</li>
-								<li>variations of passages of Lorem Ipsum</li>
-								<li>of passages of Lorem Ipsum</li>
-								<li>many variations of passages.</li>
+								<li>Presenting a Clone Gator we had made Clones of Every Concern Websites and Webservices like Youtube,Instagram,Netflix,etc </li>
+								<li>Creating an Imapact Full Solution For Every Devlopment And Testing Project</li>
+								<li>Active 89 National and 4 International Clients</li>
+								<li>Future Of Cyber Tech & Security</li>
+								<li>Varibles we Test and Find Bugs For Reputed Companies of India </li>
+								<li>Founded The Way of Learning as well as Earning/li>
 							</ul>
 						</div>
 					</div>
@@ -345,7 +312,7 @@
 					<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 wow fadeInUp">
 						<div class="section-title text-center">
 							<h2>Our Special Service</h2>
-							<p>the majority have suffered alteration in some form, by injected humour, or randomised. by injected humour, or randomised.</p>
+							<p> We Placed Services To Serve our Clients </p>
 						</div>
 					</div>
 				</div>
@@ -357,7 +324,7 @@
 							</div>
 							<div class="service-content">
 								<h3>Performance</h3>
-								<p>majority have suffered alteration in some form, by injected humour, or randomised. by injected humour, or randomised.</p>
+								<p>majority have suffered alteration in some form our Performance One Of the Most Finest Development Services we Provide
 								<a href="single-service.html">Read More</a>
 							</div>
 						</div>
@@ -369,7 +336,7 @@
 							</div>
 							<div class="service-content">
 								<h3>Web Development</h3>
-								<p>majority have suffered alteration in some form, by injected humour, or randomised. by injected humour, or randomised.</p>
+								<p>Web Devlopment is a Leading way to Show case your Business and eventuly to grow it , we Develop website Using Modern UI/UX</p>
 								<a href="single-service.html">Read More</a>
 							</div>
 						</div>
@@ -380,8 +347,8 @@
 								<img src="assets/images/service/3.jpg" alt="" />
 							</div>
 							<div class="service-content">
-								<h3>Creative Arts</h3>
-								<p>majority have suffered alteration in some form, by injected humour, or randomised. by injected humour, or randomised.</p>
+								<h3>Cyber Security</h3>
+								<p>We Test Networks , we Test websites and web services find Bugs and other Security Flaw and Help Clients to be secure & Updated</p>
 								<a href="single-service.html">Read More</a>
 							</div>
 						</div>
@@ -405,7 +372,7 @@
 							</div>
 							<div class="col-md-3 col-sm-3 col-xs-6 wow fadeInUp"  data-wow-delay=".2s">
 								<div class="fanfact-wrap">
-									<h2 class="counter">15445</h2>
+									<h2 class="counter">122</h2>
 									<p>Web Development</p>
 								</div>
 							</div>
@@ -417,8 +384,8 @@
 							</div>
 							<div class="col-md-3 col-sm-3 col-xs-6 wow fadeInUp"  data-wow-delay=".4s">
 								<div class="fanfact-wrap">
-									<h2 class="counter">1200</h2>
-									<p>Photoshop</p>
+									<h2 class="counter">1298473</h2>
+									<p>Lines of Code </p>
 								</div>
 							</div>
 						</div>
@@ -882,7 +849,7 @@
 					<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 wow fadeInUp">
 						<div class="section-title text-center">
 							<h2>Our Clients Say</h2>
-							<p>The majority have suffered alteration in some form, by injected humour, or randomised. by injected humour, or randomised.</p>
+							<p><i>"Well Plublished and Mangement ,dealing with Cosmo is like the best Devlopment services they provide"</i></p>
 						</div>
 					</div>
 				</div>
@@ -891,8 +858,8 @@
 						<div class="col-xs-12 wow fadeInLeft">
 							<div class="client-wrap fix">
 								<div class="client-info text-right">
-									<h3>Brayden Shar</h3>
-                                    <span>CEO, Company Name</span>
+									<h3>Satyam Tiwari</h3>
+                                    <span>CEO, Cosmo Security</span>
                                     <ul>
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -1141,9 +1108,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" style="color: white;">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | COSMO SECURITY -<i>Updating India</i>
                         </div>
                     </div>
                 </div>
