--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star-o"></i></li>
                                     </ul>
-									<p>All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words</p>
+									<p>All the  necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words</p>
 								</div>
 								<div class="client-img pull-right">
 									<img src="assets/images/client/1.jpg" alt="" />
@@ -877,8 +877,8 @@
 						<div class="col-xs-12 wow fadeInRight">
 							<div class="client-wrap fix">
 								<div class="client-info">
-									<h3>Robert Kyle</h3>
-                                    <span>CEO, Company Name</span>
+									<h3>Aditya Hemkar</h3>
+                                    <span>Marketing</span>
                                     <ul>
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -886,7 +886,7 @@
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
                                     </ul>
-									<p>All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words</p>
+									<p>All  predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words</p>
 								</div>
 								<div class="client-img pull-left client-img2">
 									<img src="assets/images/client/2.jpg" alt="" />
@@ -896,8 +896,8 @@
 						<div class="col-xs-12 wow fadeInLeft">
 							<div class="client-wrap fix">
 								<div class="client-info text-right">
-									<h3>Brayden Shar</h3>
-                                    <span>CEO, Company Name</span>
+									<h3>Bapun Das</h3>
+                                    <span>Officer , COSMO TEAM</span>
                                     <ul>
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
