--- a/template.html
+++ b/template.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-
+<!--
+  Invoice template by invoicebus.com
+  To customize this template consider following this guide https://invoicebus.com/how-to-create-invoice-template/
+  This template is under Invoicebus Template License, see https://invoicebus.com/templates/license/
+-->
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Houzzcart (Quotation)</title>
+    <title>Easy (corporate)</title>
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
